# end2end-messenger

./: Cargo.toml  README.md  cert.pem  config.json  key.pem
src/: chatserver.rs  chatsession.rs  main.rs  test.rs
static/: index.html
